@startuml

class Data{
valve:str
junctions:str
}

Data*--Fill
Data*--Sensitivity
Data*--Empty

class Fill{
    t1:time
    t2:time
    time()->float
    text()->str
    result()->bool
    start()
    update()

}
class Sensitivity{
    ptc:list[float]
    t1:time
    t2:time
    time()->float
    start()
    update()
    delta_p()
    text()->str
    result()->bool
}

class Empty{
    t1:time
    t2:time
    time()->float
    text()->str
    result()->bool
    start()
    update()
}



@enduml